# fairness

./: .gitignore  GUIDE_UTILISATEUR.md  INSTRUCTIONS_SUPABASE.md  README.md  debug-fetch.js  debug_api.py  middleware.js  netlify.toml  next.config.js  package-lock.json  package.json  supabase_schema.sql  tailwind.config.js  test_result.md  test_supabase_connection.js
app/: globals.css  layout.js  not-found.js  page.js
app/about/: page.js
app/blog/: page.js
app/careers/: page.js
app/contact/: page.js
app/dashboard/: error.js  layout.js  loading.js  page.js
app/forgot-password/: page.js
app/login/: page.js
app/onboarding/: page.js
app/pricing/: page.js
app/reset-password/: page.js
app/signup/: page.js
app/verify-email/: page.js
backend/: apply_ds_migration.py  apply_ds_migration_sqla.py  check_db_data.py  check_genai.py  config.py  diagnose_models.py  ds_engine.py  ethics_validator.py  finalize_ds_migration.py  fix_db_robust.py  fix_db_robust_v2.py  fix_db_schema.py  introspect_db.py  list_db_cols.py  llm_service.py  main.py  middleware.py  models_debug.txt  pyproject.toml  requirements.txt  schemas.py  start.sh  utils.py
backend/routers/: datascience.py  datasets.py  fairness.py  ml.py  reports.py
backend/uploads/: 36c7bfe8-63f0-4f5e-828b-eb1476fc66e7.csv
components/: theme-toggle.jsx
components/audit/: DataBiasAnalysis.js  LLMAnalysis.js
components/dashboard/: ai-dashboard.js  header.js  (+7 more)
lib/: api-utils.js  auth-context.js  feature-flags.js  gemini.js  supabase.js
public/: site.webmanifest
temp/: source.html
tests/: test_api.py
(+65 files in other folders)
