[project]
name = "auditiq-backend"
version = "2.0.0"
description = "AuditIQ ML Backend - AI Fairness Auditing API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "aif360>=0.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pdfkit>=1.0",
    "reportlab>=4.2",
    "supabase>=2.6",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "imbalanced-learn>=0.12",
    "joblib>=1.4",
    "shap>=0.45",
    "lime>=0.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "slowapi>=0.1.9",
    "google-generativeai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
